ingress/NoteAppService.yml
kind: Service
apiVersion: v1
metadata: 
  name: note-app-service
  namespace: nginx-ns
spec:
  selector:
    app: note-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 5000
