ingress/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-note-ingress
  namespace: nginx-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
       paths:
         - pathType: Prefix
           path: /nginx
           backend:
             service:
              name: nginx-service
              port: 
                number: 80
         - pathType: Prefix
           path: /
           backend:
              service:
                name: note-app-service
                port:
                  number: 6000
